# slit

./: Cargo.toml  README.md  rust-toolchain.toml
api/: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: board.rs  mod.rs  player.rs  treasury.rs
program/: Cargo.toml
program/src/: create.rs  initialize.rs  lib.rs  play.rs  redeem.rs  register.rs  settle.rs  stake.rs  swap.rs
program/tests/: test.rs
