[package]
name = "slit-program"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
slit-api.workspace = true
solana-program.workspace = true
steel.workspace = true

[dev-dependencies]
base64 = "0.21"
solana-sdk = "1.18"
uuid = { version = "1.11.0", features = ["v4"] }
solana-program-test = "1.18"
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10.8"
